<resources>
    <string name="app_name">NASA Api App</string>

    <!--    fragment_picture-->
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="chip_before_yesterday">Позавчера</string>
    <string name="chip_yesterday">Вчера</string>
    <string name="chip_today">Сегодня</string>

    <!--    menu_change_theme-->
    <string name="change_theme">Поменять тему</string>

    <!--    error_layout-->
    <string name="button_reload">Reload</string>

    <!--    fragment_photo_from_mars-->
    <string name="photo_from_mars_header">Фотографии с Марса</string>

    <!--    fragment_meteors-->
    <string name="asteroid_picture">asteroid picture</string>

    <!--    item_meteor-->
    <string name="item_meteor_label_diameter">Максимальный диаметр, км:</string>
    <string name="item_meteor_label_asteroid_name">Название астероида:</string>
    <string name="label_approach_date">Дата сближения:</string>
    <string name="label_distance">Расстояние до Земли, км:</string>

</resources>